Now builds up per Xenomorph max fire tolerance and once reached, don't flee fire anymore and can put out fire then as well.